@@ -14,25 +14,23 @@ import com.vividsolutions.jump.io.EndianDataOutputStream;
  * Wrapper for a Shapefile polygon.
  */
 public class PolygonHandler implements ShapeHandler{
+
     protected static CGAlgorithms cga = new RobustCGAlgorithms();
+
     int myShapeType;
     
-    public PolygonHandler()
-    {
+    public PolygonHandler() {
         myShapeType = 5;
     }
     
-      public PolygonHandler(int type) throws InvalidShapefileException
-        {
-            if  ( (type != 5) &&  (type != 15) &&  (type != 25) )
-                throw new InvalidShapefileException("PolygonHandler constructor - expected type to be 5, 15, or 25.");
-            
-            myShapeType = type;
+    public PolygonHandler(int type) throws InvalidShapefileException {
+        if  ( (type != 5) &&  (type != 15) &&  (type != 25) )
+            throw new InvalidShapefileException("PolygonHandler constructor - expected type to be 5, 15, or 25.");
+        myShapeType = type;
     }
     
     //returns true if testPoint is a point in the pointList list.
-    boolean pointInList(Coordinate testPoint, Coordinate[] pointList)
-    {
+    /*boolean pointInList(Coordinate testPoint, Coordinate[] pointList) {
         int t, numpoints;
         Coordinate  p;
         
@@ -48,20 +46,18 @@ public class PolygonHandler implements ShapeHandler{
             }
         }
         return false;
-    }
+    }*/
     
-    public Geometry read( EndianDataInputStream file , GeometryFactory geometryFactory, int contentLength)
-    throws IOException, InvalidShapefileException
-    {
+    public Geometry read(EndianDataInputStream file ,
+                         GeometryFactory geometryFactory,
+                         int contentLength) throws IOException, InvalidShapefileException {
     
-    	int actualReadWords = 0; //actual number of words read (word = 16bits)
+        int actualReadWords = 0; //actual number of words read (word = 16bits)
         
-       // file.setLittleEndianMode(true);
-        int shapeType = file.readIntLE();	
-		actualReadWords += 2;
+        int shapeType = file.readIntLE();
+        actualReadWords += 2;
         
-         if (shapeType ==0)
-        {
+        if (shapeType ==0) {
              return new MultiPolygon(null,new PrecisionModel(),0); //null shape
         }
         
@@ -75,86 +71,73 @@ public class PolygonHandler implements ShapeHandler{
         file.readDoubleLE();
         file.readDoubleLE();
         file.readDoubleLE();
-        
-		actualReadWords += 4*4;
- 
-        
+        actualReadWords += 4*4;
+
         int partOffsets[];
-        
+
         int numParts = file.readIntLE();
-        int numPoints = file.readIntLE();       
-		actualReadWords += 4;
-        
+        int numPoints = file.readIntLE();
+        actualReadWords += 4;
+
         partOffsets = new int[numParts];
-        
-        for(int i = 0;i<numParts;i++){
+
+        for(int i = 0;i<numParts;i++) {
             partOffsets[i]=file.readIntLE();
-			actualReadWords += 2;
+            actualReadWords += 2;
         }
-        
+
         //LinearRing[] rings = new LinearRing[numParts];
         ArrayList shells = new ArrayList();
         ArrayList holes = new ArrayList();
         Coordinate[] coords = new Coordinate[numPoints];
-        
-        for(int t=0;t<numPoints;t++)
-        {
+
+        for(int t=0;t<numPoints;t++) {
             coords[t]= new Coordinate(file.readDoubleLE(),file.readDoubleLE());
-			actualReadWords += 8;
+            actualReadWords += 8;
         }
-        
-        if (myShapeType == 15)
-        {
-                //z
+
+        if (myShapeType == 15) {  // PolygonZ
             file.readDoubleLE();  //zmin
             file.readDoubleLE();  //zmax
-			actualReadWords += 8;
-             for(int t=0;t<numPoints;t++)
-            {
+            actualReadWords += 8;
+             for(int t=0;t<numPoints;t++) {
                 coords[t].z = file.readDoubleLE();
-				actualReadWords += 4;
+                actualReadWords += 4;
             }
         }
       
-        if (myShapeType >= 15)
-        {
-          //  int fullLength = 22 + (2*numParts) + (8*numPoints) + 8 + (4*numPoints)+ 8 + (4*numPoints);
-          int fullLength;
-          if (myShapeType == 15)
-          {
-          		//polyZ (with M)
-			    fullLength = 22 + (2*numParts) + (8*numPoints) + 8 + (4*numPoints)+ 8 + (4*numPoints);         	
-          }
-          else
-          {
-          		//polyM (with M)
-				fullLength = 22 + (2*numParts) + (8*numPoints) + 8+ (4*numPoints) ;
-          }
-            if (contentLength >= fullLength)
-            {
-                    file.readDoubleLE();  //mmin
-                    file.readDoubleLE();  //mmax
-					actualReadWords += 8;
-                    for(int t=0;t<numPoints;t++)
-                    {
-                         file.readDoubleLE();
-					     actualReadWords += 4;
-                    }
-            }            
+        if (myShapeType >= 15) {  // PolygonM or PolygonZ
+            //  int fullLength = 22 + (2*numParts) + (8*numPoints) + 8 + (4*numPoints)+ 8 + (4*numPoints);
+            int fullLength;
+
+            if (myShapeType == 15) { //polyZ (with M)
+                fullLength = 22 + (2*numParts) + (8*numPoints) + 8 + (4*numPoints)+ 8 + (4*numPoints);
+            }
+
+            else { //polyM (with M)
+                fullLength = 22 + (2*numParts) + (8*numPoints) + 8+ (4*numPoints) ;
+            }
+
+            if (contentLength >= fullLength) {
+                file.readDoubleLE();  //mmin
+                file.readDoubleLE();  //mmax
+                actualReadWords += 8;
+                for(int t=0;t<numPoints;t++) {
+                     file.readDoubleLE();
+                     actualReadWords += 4;
+                }
+            }
         }
-        
-        
-	//verify that we have read everything we need
-	while (actualReadWords < contentLength)
-	{
-		  int junk = file.readShortBE();	
-		 actualReadWords += 1;
-	}
-	
-        
+
+        //verify that we have read everything we need
+        while (actualReadWords < contentLength) {
+            int junk = file.readShortBE();	
+            actualReadWords += 1;
+        }
+
         int offset = 0;
         int start,finish,length;
-        for(int part=0;part<numParts;part++){
+        for(int part=0;part<numParts;part++) {
             start = partOffsets[part];
             if(part == numParts-1){finish = numPoints;}
             else {
@@ -166,40 +149,40 @@ public class PolygonHandler implements ShapeHandler{
                 points[i]=coords[offset];
                 offset++;
             }
-    		//REVISIT: polyons with only 1 or 2 points are not polygons - geometryFactory will bomb so we skip if we find one.
-            if(points.length == 0 || points.length > 3){ 
-            	LinearRing ring = geometryFactory.createLinearRing(points);
-            	if(CGAlgorithms.isCCW(points)){
-            		holes.add(ring);
-            	}
-            	else{
-            		shells.add(ring);
-            	}
+            //REVISIT: polyons with only 1 or 2 points are not polygons - geometryFactory will bomb so we skip if we find one.
+            if(points.length == 0 || points.length > 3) { 
+                LinearRing ring = geometryFactory.createLinearRing(points);
+                if(CGAlgorithms.isCCW(points)) {
+                    holes.add(ring);
+                }
+                else {
+                    shells.add(ring);
+                }
             }
-    	}
+        }
         
         if ((shells.size()>1) && (holes.size()== 0)) {
-        	//some shells may be CW holes - esri tolerates this
-        	holes = findCWHoles(shells, geometryFactory);  //find all rings contained in others
-        	if (holes.size() > 0) {
-        		shells.removeAll(holes);   
-        		ArrayList ccwHoles = new ArrayList(holes.size());
-        		for (int i=0; i<holes.size(); i++) {
-        			ccwHoles.add( reverseRing((LinearRing) holes.get(i)) );
-        		}
-        		holes = ccwHoles;
-        	}
+            //some shells may be CW holes - esri tolerates this
+            holes = findCWHoles(shells, geometryFactory);  //find all rings contained in others
+            if (holes.size() > 0) {
+                shells.removeAll(holes);   
+                ArrayList ccwHoles = new ArrayList(holes.size());
+                for (int i=0; i<holes.size(); i++) {
+                    ccwHoles.add( reverseRing((LinearRing) holes.get(i)) );
+                }
+                holes = ccwHoles;
+            }
         }
-        
-   //now we have a list of all shells and all holes
+
+        //now we have a list of all shells and all holes
         ArrayList holesForShells = new ArrayList(shells.size());
         ArrayList holesWithoutShells = new ArrayList();
-        
-        for(int i=0;i<shells.size();i++){
+
+        for(int i=0;i<shells.size();i++) {
             holesForShells.add(new ArrayList());
         }
-        
-        //find homes
+
+        //find holes
         for(int i=0;i<holes.size();i++){
             LinearRing testRing = (LinearRing)holes.get(i);
             LinearRing minShell = null;
@@ -213,110 +196,98 @@ public class PolygonHandler implements ShapeHandler{
                 if (minShell != null) minEnv = minShell.getEnvelopeInternal();
                 boolean isContained = false;
                 Coordinate[] coordList = tryRing.getCoordinates() ;
-                
-                if (tryEnv.contains(testEnv)
-                        && (cga.isPointInRing(testPt,coordList ) || (pointInList(testPt, coordList)))
-                   )
+
+                if (tryEnv.contains(testEnv) && (cga.isPointInRing(testPt,coordList )))
+                        //&& (cga.isPointInRing(testPt,coordList ) || (pointInList(testPt, coordList))))
                     isContained = true;
-                // check if this new containing ring is smaller than the current minimum ring
-                if (isContained) {
-                    if (minShell == null
-                    || minEnv.contains(tryEnv)) {
+                    // check if this new containing ring is smaller than the current minimum ring
+                    if (isContained) {
+                        if (minShell == null || minEnv.contains(tryEnv)) {
                         minShell = tryRing;
                     }
                 }
             }
             
-            if (minShell == null)
-            {
-            	holesWithoutShells.add(testRing);
-                //System.out.println("polygon found with a hole thats not inside a shell");
+            if (minShell == null) {
+                holesWithoutShells.add(testRing);
             }
-            else
-            {
+            else {
               ((ArrayList)holesForShells.get(shells.indexOf(minShell))).add(testRing);
             }
         }
-        
+
         Polygon[] polygons = new Polygon[shells.size() + holesWithoutShells.size()];
         for(int i=0;i<shells.size();i++){
             polygons[i]=geometryFactory.createPolygon((LinearRing)shells.get(i),(LinearRing[])((ArrayList)holesForShells.get(i)).toArray(new LinearRing[0]));
         }
-        
-        for (int i=0;i<holesWithoutShells.size();i++)
-        {
+
+        for (int i=0;i<holesWithoutShells.size();i++) {
             polygons[shells.size() + i]=geometryFactory.createPolygon((LinearRing)holesWithoutShells.get(i), null);        	
         }
-        
-        if(polygons.length==1){
+
+        if(polygons.length==1) {
             return polygons[0];
         }
-        
+
         holesForShells = null;
         holesWithoutShells = null;
         shells = null;
         holes = null;
-        //its a multi part
-        
 
+        //its a multi part
         Geometry result =  geometryFactory.createMultiPolygon(polygons);
-     //   if (!(result.isValid()  ))
-     //   	System.out.println("geom isnt valid");
-        return result;        
+        return result;
     }
-    
+
     ArrayList findCWHoles(ArrayList shells, GeometryFactory geometryFactory) {
         ArrayList holesCW = new ArrayList(shells.size());
         LinearRing[] noHole = new LinearRing[0];
         for (int i = 0; i < shells.size(); i++) {
-    		LinearRing iRing = (LinearRing) shells.get(i);
-    		Envelope iEnv = iRing.getEnvelopeInternal();
-			Coordinate[] coordList = iRing.getCoordinates();
-    		LinearRing jRing;
-    		for (int j = 0; j < shells.size(); j++) {
-    			if (i == j) continue;
-    			jRing = (LinearRing) shells.get(j);               
-    			Envelope jEnv = jRing.getEnvelopeInternal();                
-        		Coordinate jPt = jRing.getCoordinateN(0);
-        		Coordinate jPt2 = jRing.getCoordinateN(1);
-				if ( iEnv.contains(jEnv) 
-						//&& (CGAlgorithms.isPointInRing(jPt, coordList) || pointInList(jPt, coordList))
-						//&& (CGAlgorithms.isPointInRing(jPt2, coordList) || pointInList(jPt2, coordList))) {
+            LinearRing iRing = (LinearRing) shells.get(i);
+            Envelope iEnv = iRing.getEnvelopeInternal();
+            Coordinate[] coordList = iRing.getCoordinates();
+            LinearRing jRing;
+            for (int j = 0; j < shells.size(); j++) {
+                if (i == j) continue;
+                jRing = (LinearRing) shells.get(j);               
+                Envelope jEnv = jRing.getEnvelopeInternal();                
+                Coordinate jPt = jRing.getCoordinateN(0);
+                Coordinate jPt2 = jRing.getCoordinateN(1);
+                if (iEnv.contains(jEnv) 
+                    //&& (CGAlgorithms.isPointInRing(jPt, coordList) || pointInList(jPt, coordList))
+                    //&& (CGAlgorithms.isPointInRing(jPt2, coordList) || pointInList(jPt2, coordList))) {
                         && (CGAlgorithms.isPointInRing(jPt, coordList))
                         && (CGAlgorithms.isPointInRing(jPt2, coordList))) {
-                    Polygon iPoly = geometryFactory.createPolygon(iRing,noHole);
-                    Polygon jPoly = geometryFactory.createPolygon(jRing,noHole);
-					if (!holesCW.contains(jRing) && iPoly.contains(jPoly)) holesCW.add(jRing);
-				}
-    		}
-    	}
-    	return holesCW;
+                    if (!holesCW.contains(jRing)) {
+                        Polygon iPoly = geometryFactory.createPolygon(iRing,noHole);
+                        Polygon jPoly = geometryFactory.createPolygon(jRing,noHole);
+                        if (iPoly.contains(jPoly)) holesCW.add(jRing);
+                    }
+                }
+            }
+        }
+        return holesCW;
     }
-        
+
     /**
      *  reverses the order of points in lr (is CW -> CCW or CCW->CW)
      */
     LinearRing reverseRing(LinearRing lr) {
         int numPoints = lr.getNumPoints();
         Coordinate[] newCoords = new Coordinate[numPoints];
-
         for (int t = 0; t < numPoints; t++) {
             newCoords[t] = lr.getCoordinateN(numPoints - t - 1);
         }
-
         return new LinearRing(newCoords, new PrecisionModel(), 0);
     }
 
-  
      public void write(Geometry geometry,EndianDataOutputStream file)throws IOException{
-         
 
-         
-         MultiPolygon multi;
-        if(geometry instanceof MultiPolygon){
+        MultiPolygon multi;
+        if(geometry instanceof MultiPolygon) {
             multi = (MultiPolygon)geometry;
         }
-        else{
+        else {
             multi = new MultiPolygon(new Polygon[]{(Polygon)geometry},geometry.getPrecisionModel(),geometry.getSRID());
         }
         //file.setLittleEndianMode(true);
@@ -330,68 +301,56 @@ public class PolygonHandler implements ShapeHandler{
         
         //need to find the total number of rings and points
         int nrings=0;
-        
-        for (int t=0;t<multi.getNumGeometries();t++)
-        {
+        for (int t=0;t<multi.getNumGeometries();t++) {
             Polygon p;
             p = (Polygon) multi.getGeometryN(t);
             nrings = nrings + 1 + p.getNumInteriorRing();
         }
-        
+
         int u=0;
         int[] pointsPerRing = new int[nrings];
-        for (int t=0;t<multi.getNumGeometries();t++)
-        {
+        for (int t=0;t<multi.getNumGeometries();t++) {
             Polygon p;
             p = (Polygon) multi.getGeometryN(t);
             pointsPerRing[u] = p.getExteriorRing().getNumPoints();
             u++;
-            for(int v=0;v<p.getNumInteriorRing();v++)
-            {
+            for(int v=0;v<p.getNumInteriorRing();v++) {
                 pointsPerRing[u]  = p.getInteriorRingN(v).getNumPoints();
                 u++;
             }
-        }       
-        
-       
+        }
+
         int npoints = multi.getNumPoints();
-        
+
         file.writeIntLE(nrings);
         file.writeIntLE(npoints);
-        
+
         int count =0;
-        for(int t=0;t<nrings;t++)
-        {
+        for(int t=0;t<nrings;t++) {
             file.writeIntLE(count);
             count = count + pointsPerRing[t] ;
         }
-        
+
         //write out points here!
         Coordinate[] coords = multi.getCoordinates();
         int num;
         num = Array.getLength(coords);
-        for(int t=0;t<num;t++)
-        {
+        for(int t=0;t<num;t++) {
             file.writeDoubleLE(coords[t].x);
             file.writeDoubleLE(coords[t].y);
-        }       
-        
-        if (myShapeType == 15)
-        {
-                //z
+        }
+
+        if (myShapeType == 15) {  //z
             double[] zExtreame = zMinMax(multi);
-            if (Double.isNaN(zExtreame[0] ))
-            {
+            if (Double.isNaN(zExtreame[0] )) {
                 file.writeDoubleLE(0.0);
                 file.writeDoubleLE(0.0);
             }
-            else
-            {
+            else {
                 file.writeDoubleLE(zExtreame[0]);
                 file.writeDoubleLE(zExtreame[1]);
             }
-            for (int t=0;t<npoints; t++)
-            {
+            for (int t=0 ; t<npoints ; t++) {
                 double z = coords[t].z;
                 if (Double.isNaN(z))
                      file.writeDoubleLE(0.0);
@@ -399,98 +358,72 @@ public class PolygonHandler implements ShapeHandler{
                      file.writeDoubleLE(z);
             }
         }
-        
-        if (myShapeType >=15)
-        {
-                //m
+
+        if (myShapeType >= 15) {  //m
             file.writeDoubleLE(-10E40);
             file.writeDoubleLE(-10E40);
-            for(int t=0;t<npoints;t++)
-            {
-                   file.writeDoubleLE(-10E40);
+            for(int t=0;t<npoints;t++) {
+               file.writeDoubleLE(-10E40);
             }
         }
     }
-    
-    
-    public int getShapeType(){
+
+    public int getShapeType() {
         return myShapeType;
     }
-    public int getLength(Geometry geometry){
-        
-           MultiPolygon multi;
-        if(geometry instanceof MultiPolygon){
+
+    public int getLength(Geometry geometry) {
+        MultiPolygon multi;
+        if(geometry instanceof MultiPolygon) {
             multi = (MultiPolygon)geometry;
         }
-        else{
+        else {
             multi = new MultiPolygon(new Polygon[]{(Polygon)geometry},geometry.getPrecisionModel(),geometry.getSRID());
         }
-        
-         int nrings=0;
-        
-        for (int t=0;t<multi.getNumGeometries();t++)
-        {
+        int nrings=0;
+        for (int t=0 ; t<multi.getNumGeometries() ; t++) {
             Polygon p;
             p = (Polygon) multi.getGeometryN(t);
             nrings = nrings + 1 + p.getNumInteriorRing();
         }
-         
-         int npoints = multi.getNumPoints();
-         
-         if (myShapeType == 15)
-         {
-             return 22+(2*nrings)+8*npoints + 4*npoints+8 +4*npoints+8;
-         }
-         if (myShapeType==25)
-         {
-             return 22+(2*nrings)+8*npoints + 4*npoints+8 ;
-         }
-         
-         
-         return 22+(2*nrings)+8*npoints;
+        int npoints = multi.getNumPoints();
+        if (myShapeType == 15) {
+             return 22 + (2*nrings) + 8*npoints + 4*npoints + 8 + 4*npoints + 8;
+        }
+        if (myShapeType==25) {
+            return 22 + (2*nrings) + 8*npoints + 4*npoints + 8 ;
+        }
+        return 22 + (2*nrings) + 8*npoints;
     }
-    
-    
-      double[] zMinMax(Geometry g)
-    {
-        double zmin,zmax;
+
+     double[] zMinMax(Geometry g) {
+        //double zmin,zmax;
         boolean validZFound = false;
         Coordinate[] cs = g.getCoordinates();
         double[] result = new double[2];
-        
-        zmin = Double.NaN;
-        zmax = Double.NaN;
+
+        double zmin = Double.NaN;
+        double zmax = Double.NaN;
         double z;
-        
-        for (int t=0;t<cs.length; t++)
-        {
+
+        for (int t=0 ; t<cs.length ; t++) {
             z= cs[t].z ;
-            if (!(Double.isNaN( z ) ))
-            {
-                if (validZFound)
-                {
-                    if (z < zmin)
-                        zmin = z;
-                    if (z > zmax)
-                        zmax = z;
+            if (!(Double.isNaN( z ))) {
+                if (validZFound) {
+                    if (z < zmin) zmin = z;
+                    if (z > zmax) zmax = z;
                 }
-                else
-                {
+                else {
                     validZFound = true;
-                    zmin =  z ;
-                    zmax =  z ;
+                    zmin = z ;
+                    zmax = z ;
                 }
             }
-           
         }
-        
         result[0] = (zmin);
         result[1] = (zmax);
         return result;
-        
     }
-    
-    
 }
 
 /*
